yyamamoto+sesetup@salesforce.com/src/objects/CustomObject7__c.object
<CustomObject>
    <fields>
        <fullName>Field10__c</fullName>
        <formula>Field7__c *  Field1__r.Field10__r.Field22__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>値引き（数式）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <formula>Field7__c -  Field9__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>値引き後金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>請求</label>
        <referenceTo>CustomObject6__c</referenceTo>
        <relationshipLabel>請求明細</relationshipLabel>
        <relationshipName>BillingDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>請求明細</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>B-{00000}</displayFormat>
        <label>請求明細番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>